# Sign_Detection_Cpp

./: .gitignore  4_yolox_nano.xml  CMakeLists.txt  README.md  main.cpp  yolox_inference.cpp
